# cpp_skeleton

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  appveyor.yml  main.cpp
CMake/: CppResultType.cmake  catch2.cmake  clara.cmake
Tests/: CMakeLists.txt  TestMain.cpp  Test_1.cpp  Test_MultiPredicate.cpp  Test_compose.cpp
cmake/modules/: CppResultType.cmake  catch2.cmake
lib/: CMakeLists.txt  MultiPredicate.h  Then.h  compose.h  fun.cpp  fun.h  pipedfunctioncalls.h
misc/: appveyorTestRunScript.bat
mylib/: CMakeLists.txt  fun.h
